--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url,names = cols,sep=' ')\n"
    ]
   },
   {
@@ -56,12 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+      "55     0        81          0        -6    11      25         88        64   \n",
+      "56     0        96          0        52    -4      40         44         4   \n",
+      "50    -1        89         -7        50     0      39         40         2   \n",
+      "53     9        79          0        42    -2      25         37        12   \n",
+      "55     2        82          0        54    -6      26         28         2   \n",
+      "\n",
+      "    class  \n",
+      "55      4  \n",
+      "56      4  \n",
+      "50      1  \n",
+      "53      4  \n",
+      "55      1  \n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(shuttle.head())\n"
    ]
   },
   {
@@ -73,12 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = shuttle.to_csv('shuttle.csv', index=False)"
    ]
   },
   {
@@ -94,12 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut = pd.read_excel('astronauts.xls')\n"
    ]
   },
   {
@@ -111,12 +131,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Name    Year  Group   Status Birth Date    Birth Place Gender  \\\n",
+      "0   Joseph M. Acaba  2004.0   19.0   Active 1967-05-17  Inglewood, CA   Male   \n",
+      "1    Loren W. Acton     NaN    NaN  Retired 1936-03-07   Lewiston, MT   Male   \n",
+      "2  James C. Adamson  1984.0   10.0  Retired 1946-03-03     Warsaw, NY   Male   \n",
+      "3   Thomas D. Akers  1987.0   12.0  Retired 1951-05-20  St. Louis, MO   Male   \n",
+      "4       Buzz Aldrin  1963.0    3.0  Retired 1930-01-20  Montclair, NJ   Male   \n",
+      "\n",
+      "                                          Alma Mater     Undergraduate Major  \\\n",
+      "0  University of California-Santa Barbara; Univer...                 Geology   \n",
+      "1   Montana State University; University of Colorado     Engineering Physics   \n",
+      "2          US Military Academy; Princeton University             Engineering   \n",
+      "3                       University of Missouri-Rolla     Applied Mathematics   \n",
+      "4                           US Military Academy; MIT  Mechanical Engineering   \n",
+      "\n",
+      "          Graduate Major Military Rank         Military Branch  Space Flights  \\\n",
+      "0                Geology           NaN                     NaN              2   \n",
+      "1          Solar Physics           NaN                     NaN              1   \n",
+      "2  Aerospace Engineering       Colonel       US Army (Retired)              2   \n",
+      "3    Applied Mathematics       Colonel  US Air Force (Retired)              4   \n",
+      "4           Astronautics       Colonel  US Air Force (Retired)              2   \n",
+      "\n",
+      "   Space Flight (hr)  Space Walks  Space Walks (hr)  \\\n",
+      "0               3307            2              13.0   \n",
+      "1                190            0               0.0   \n",
+      "2                334            0               0.0   \n",
+      "3                814            4              29.0   \n",
+      "4                289            2               8.0   \n",
+      "\n",
+      "                                            Missions Death Date Death Mission  \n",
+      "0             STS-119 (Discovery), ISS-31/32 (Soyuz)        NaT           NaN  \n",
+      "1                              STS 51-F (Challenger)        NaT           NaN  \n",
+      "2               STS-28 (Columbia), STS-43 (Atlantis)        NaT           NaN  \n",
+      "3  STS-41 (Discovery), STS-49 (Endeavor), STS-61 ...        NaT           NaN  \n",
+      "4                               Gemini 12, Apollo 11        NaT           NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "print(astronaut.head())\n"
    ]
   },
   {
@@ -128,12 +189,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Physics                     35\n",
+       "Aerospace Engineering       33\n",
+       "Mechanical Engineering      30\n",
+       "Aeronautical Engineering    28\n",
+       "Electrical Engineering      23\n",
+       "                            ..\n",
+       "Geosciences                  1\n",
+       "Psychology                   1\n",
+       "Mathematics & Economics      1\n",
+       "Industrial Engineering       1\n",
+       "Astronomy                    1\n",
+       "Name: Undergraduate Major, Length: 83, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut['Undergraduate Major'].value_counts()"
    ]
   },
   {
@@ -145,12 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "astronaut = astronaut.to_csv('astronaut.csv', index=False)\n"
    ]
   },
   {
@@ -164,13 +247,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Season in which the analysis was performed  Age at the time of analysis  \\\n",
+      "0                                       -0.33                         0.69   \n",
+      "1                                       -0.33                         0.94   \n",
+      "2                                       -0.33                         0.50   \n",
+      "3                                       -0.33                         0.75   \n",
+      "4                                       -0.33                         0.67   \n",
+      "\n",
+      "   Childish diseases (ie , chicken pox, measles, mumps, polio)  \\\n",
+      "0                                                  0             \n",
+      "1                                                  1             \n",
+      "2                                                  1             \n",
+      "3                                                  0             \n",
+      "4                                                  1             \n",
+      "\n",
+      "   Accident or serious trauma  Surgical intervention  \\\n",
+      "0                           1                      1   \n",
+      "1                           0                      1   \n",
+      "2                           0                      0   \n",
+      "3                           1                      1   \n",
+      "4                           1                      0   \n",
+      "\n",
+      "   High fevers in the last year  Frequency of alcohol consumption  \\\n",
+      "0                             0                               0.8   \n",
+      "1                             0                               0.8   \n",
+      "2                             0                               1.0   \n",
+      "3                             0                               1.0   \n",
+      "4                             0                               0.8   \n",
+      "\n",
+      "   Smoking habit 1) never, 2) occasional 3) daily. (-1, 0, 1)  \\\n",
+      "0                                                  0            \n",
+      "1                                                  1            \n",
+      "2                                                 -1            \n",
+      "3                                                 -1            \n",
+      "4                                                 -1            \n",
+      "\n",
+      "   Number of hours spent sitting per day ene-16 (0, 1)  \\\n",
+      "0                                               0.88     \n",
+      "1                                               0.31     \n",
+      "2                                               0.50     \n",
+      "3                                               0.38     \n",
+      "4                                               0.50     \n",
+      "\n",
+      "  Output: Diagnosis normal (N), altered (O)  \n",
+      "0                                         N  \n",
+      "1                                         O  \n",
+      "2                                         N  \n",
+      "3                                         N  \n",
+      "4                                         O  \n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "col_names = ['Season in which the analysis was performed', 'Age at the time of analysis', 'Childish diseases (ie , chicken pox, measles, mumps, polio)', 'Accident or serious trauma','Surgical intervention', 'High fevers in the last year','Frequency of alcohol consumption','Smoking habit 1) never, 2) occasional 3) daily. (-1, 0, 1)','Number of hours spent sitting per day ene-16 (0, 1)','Output: Diagnosis normal (N), altered (O)']\n",
+    "fertility = pd.read_csv('fertility_Diagnosis.txt', sep=',',names=col_names)\n",
+    "print(fertility.head())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -189,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
