--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your pandas import here:\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>rad_flow</th>\n",
+       "      <th>fpv_close</th>\n",
+       "      <th>fpv_open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>bypass</th>\n",
+       "      <th>bpv_close</th>\n",
+       "      <th>bpv_open</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>25</td>\n",
+       "      <td>88</td>\n",
+       "      <td>64</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>0</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>40</td>\n",
+       "      <td>44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>9</td>\n",
+       "      <td>79</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>37</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>2</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-36</td>\n",
+       "      <td>-29</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120</td>\n",
+       "      <td>116</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-20</td>\n",
+       "      <td>25</td>\n",
+       "      <td>26</td>\n",
+       "      <td>102</td>\n",
+       "      <td>76</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>-22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>65</td>\n",
+       "      <td>42</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>0</td>\n",
+       "      <td>103</td>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>2</td>\n",
+       "      <td>98</td>\n",
+       "      <td>0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>46</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14500 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    time  rad_flow  fpv_close  fpv_open  high  bypass  bpv_close  bpv_open  \\\n",
+       "55     0        81          0        -6    11      25         88        64   \n",
+       "56     0        96          0        52    -4      40         44         4   \n",
+       "50    -1        89         -7        50     0      39         40         2   \n",
+       "53     9        79          0        42    -2      25         37        12   \n",
+       "55     2        82          0        54    -6      26         28         2   \n",
+       "..   ...       ...        ...       ...   ...     ...        ...       ...   \n",
+       "80     0        84          0       -36   -29       4        120       116   \n",
+       "55     0        81          0       -20    25      26        102        76   \n",
+       "55     0        77          0        12   -22      22         65        42   \n",
+       "37     0       103          0        18   -16      66         85        20   \n",
+       "56     2        98          0        52     1      42         46         4   \n",
+       "\n",
+       "    class  \n",
+       "55      4  \n",
+       "56      4  \n",
+       "50      1  \n",
+       "53      4  \n",
+       "55      1  \n",
+       "..    ...  \n",
+       "80      5  \n",
+       "55      4  \n",
+       "55      4  \n",
+       "37      1  \n",
+       "56      4  \n",
+       "\n",
+       "[14500 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "shuttle = pd.read_csv(tst_url,names=cols,sep=' ')\n",
+    "shuttle"
    ]
   },
   {
@@ -189,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
